# quidditch-players-android-ndk-2025

./: .editorconfig  .gitignore  CMake.gitignore  README.md  build.gradle  build.gradle.kts  settings.gradle.kts
.circleci/: config.yml
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/cjmobileapps/quidditchplayersandroid/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/cjmobileapps/quidditchplayersandroid/data/datasource/: QuidditchPlayersApiDataSourceTest.kt  QuidditchPlayersLocalDataSourceTest.kt
app/src/androidTest/java/com/cjmobileapps/quidditchplayersandroid/data/quidditchplayers/: QuidditchPlayersRepositoryImplTest.kt  QuidditchPlayersUseCaseTest.kt
app/src/androidTest/java/com/cjmobileapps/quidditchplayersandroid/testutil/: BaseAndroidTest.kt  ComposeTestRuleExtensions.kt
app/src/androidTest/java/com/cjmobileapps/quidditchplayersandroid/ui/houses/: HousesUiTest.kt
app/src/androidTest/java/com/cjmobileapps/quidditchplayersandroid/ui/houses/viewmodel/: HouseViewModelImplTest.kt
app/src/androidTest/java/com/cjmobileapps/quidditchplayersandroid/ui/playerdetail/: PlayerDetailViewModelImplTest.kt
app/src/androidTest/java/com/cjmobileapps/quidditchplayersandroid/ui/playerlist/: PlayerListViewModelImplTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp  native-lib.h
app/src/main/cpp/src/: native-lib.cpp  native-lib.h
app/src/main/cpp/src/com/cjmobileapps/quidditchplayers/: native-lib.cpp  native-lib.h
app/src/main/cpp/src/com/cjmobileapps/quidditchplayers/data/: CMakeLists.txt  MockData.cpp  MockData.h
app/src/main/cpp/src/com/cjmobileapps/quidditchplayers/model/: CMakeLists.txt  Error.cpp  Error.h  House.cpp  House.h  Player.cpp  Player.h  Positions.cpp  Positions.h  ResponseWrapper.cpp  ResponseWrapper.h  Status.cpp  Status.h
app/src/main/cpp/src/com/cjmobileapps/quidditchplayers/network/: CMakeLists.txt  HttpStatus.cpp  HttpStatus.h
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/: MainActivity.kt  QuidditchPlayersApplication.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/data/: MockData.kt  MockDataFromCPP.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/data/datasource/: QuidditchPlayersApiDataSource.kt  QuidditchPlayersLocalDataSource.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/data/model/: House.kt  Player.kt  Position.kt  ResponseWrapper.kt  Status.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/data/quidditchplayers/: QuidditchPlayersRepository.kt  QuidditchPlayersRepositoryImpl.kt  QuidditchPlayersUseCase.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/hilt/module/: CoroutinesModule.kt  DataModule.kt  NetworkModule.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/network/: NetworkConstants.kt  QuidditchPlayersApi.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/room/: Converters.kt  DatabaseFactory.kt  QuidditchPlayersDao.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/ui/: QuidditchPlayersActivity.kt  QuidditchPlayersNavHost.kt  QuidditchPlayersTopAppBar.kt  QuidditchPlayersUi.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/ui/houses/: HousesShimmerLoadingUi.kt  HousesUi.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/ui/houses/viewmodel/: HousesViewModel.kt  HousesViewModelImpl.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/ui/playerdetail/: PlayerDetailUi.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/ui/playerdetail/viewmodel/: PlayerDetailViewModel.kt  (+1 more)
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/ui/playerslist/: PlayerListShimmerLoadingUi.kt  PlayerUi.kt  PlayersListUi.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/ui/util/: QuidditchPlayersImage.kt  ShimmerBrush.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/util/: ExcludeFromJacocoGeneratedReport.kt  ResultExtensions.kt  TimeUtil.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/util/coroutine/: CoroutineDispatchers.kt  CoroutineDispatchersImpl.kt
app/src/main/java/com/cjmobileapps/quidditchplayersandroid/util/time/: TimeUtil.kt  TimeUtilImpl.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/cjmobileapps/quidditchplayersandroid/: ExampleUnitTest.kt
app/src/test/java/com/cjmobileapps/quidditchplayersandroid/data/datasource/: QuidditchPlayersApiDataSourceTest.kt  QuidditchPlayersLocalDataSourceTest.kt
app/src/test/java/com/cjmobileapps/quidditchplayersandroid/data/quidditchplayers/: QuidditchPlayersRepositoryImplTest.kt  QuidditchPlayersUseCaseTest.kt
app/src/test/java/com/cjmobileapps/quidditchplayersandroid/testutil/: BaseTest.kt  TestCoroutineDispatchers.kt
app/src/test/java/com/cjmobileapps/quidditchplayersandroid/ui/playerdetail/: PlayerDetailViewModelImplTest.kt
app/src/test/java/com/cjmobileapps/quidditchplayersandroid/util/: TestCoroutineDispatchers.kt  TestTimeUtil.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
